// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configuration Configuration is invalid if actionReviewTeam is empty or missing 1`] = `
Array [
  "ERROR:  Action Review Team (action input: action-review-team) should be provided",
]
`;

exports[`Configuration Configuration is invalid if check_type is missing 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Configuration is invalid if condition is missing 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Configuration is invalid if locksReviewTeam is empty or missing 1`] = `
Array [
  "ERROR:  Locks Review Team (action input: locks-review-team) should be provided",
]
`;

exports[`Configuration Configuration is invalid if min_approvals is less than 1 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Configuration is invalid if min_approvals is missing 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Configuration is invalid if name is missing 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Configuration is invalid if teamLeadsTeam is empty or missing 1`] = `
Array [
  "ERROR:  Team Leads Team (action input: team-leads-team) should be provided",
]
`;

exports[`Configuration Rule kind AndDistinctRule does not allow invalid field all 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndDistinctRule does not allow invalid field any 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndDistinctRule does not allow invalid field min_approvals 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndDistinctRule does not allow invalid field teams 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndDistinctRule does not allow invalid field users 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndRule does not allow invalid field all_distinct 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndRule does not allow invalid field any 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndRule does not allow invalid field min_approvals 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndRule does not allow invalid field teams 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind AndRule does not allow invalid field users 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind BasicRule does not allow invalid field all 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind BasicRule does not allow invalid field all_distinct 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind BasicRule does not allow invalid field any 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind OrRule does not allow invalid field all 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind OrRule does not allow invalid field all_distinct 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind OrRule does not allow invalid field min_approvals 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind OrRule does not allow invalid field teams 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration Rule kind OrRule does not allow invalid field users 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for AndDistinctRule if it is less than 1 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for AndDistinctRule if it is null 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for AndRule if it is less than 1 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for AndRule if it is null 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for BasicRule if it is less than 1 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for BasicRule if it is null 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for OrRule if it is less than 1 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;

exports[`Configuration min_approvals is invalid for OrRule if it is null 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "ERROR:  Configuration file is invalid",
  "[Error [ValidationError]: \\"rules[0]\\" does not match any of the allowed types] {
  _original: { rules: [ [Object] ] },
  details: [
    {
      message: '\\"rules[0]\\" does not match any of the allowed types',
      path: [Array],
      type: 'alternatives.match',
      context: [Object]
    }
  ]
}",
]
`;
